@@ -163,6 +163,8 @@ error("incorrect type in obj_check (t_VEC).")
 ^8 + 2^9 + O(2^11))), 2^3 + 2^4 + O(2^8), [2^-3 + 2^2 + 2^4 + 2^7 + 2^10 + O
 (2^11), 2^-3 + 2^2 + 2^5 + 2^6 + 2^10 + O(2^13)]]
 x^-2 + 31/15*x^2 + 2501/756*x^4 + 961/675*x^6 + 77531/41580*x^8 + O(x^9)
+[5.0000000000000000000000000000000000000, 4.99999999999999999999999999999999
+99998]
 [-1, -2*w]
 [-1, 1/2*I]
 [[-1, 1/2*I], [0.59200051084078635056480901325155142952, -6.5791855625999796
@@ -463,4 +465,4 @@ t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 + O(t^6)
   *** ellformalw: domain error in ellformalw: precision <= 0
 242.47010035195076100129810400142304776
 0
-Total time spent: 476
+Total time spent: 528
